# Vega-Strike-Engine-Source

./: .config.huge  .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  Brewfile  Brewfile.bak  Brewfile.lock.json  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  ChangeLog  DOCUMENTATION  Dockerfile  FindFFMPEG.cmake  FindGTK2.cmake  FindMATH.cmake  FindPNG.cmake  INSTALL.md  LICENCE  LICENSE  Makefile  Makefile.am  Makefile.cvs  Makefile.in  README  README.MACOSX.rtf  README.md  README.sgi  Resources.aps  Resources.rc  TODO  ToDo.txt  VegaStrikeOSX.icns  acinclude.m4  aclocal.m4  boost_gcc44.patch  bootstrap-sh  build-0.10.sh  (+40 more)
boost/1_28/: CMakeLists.txt
boost/1_53/: CMakeLists.txt
data/: .gitignore  .vegastrikerc  9x12.fon  Dumbfire.xunit  Makefile.am  New_Game  Planetary-Ring.xmesh  Planetary-Ring.xunit  Planetary-Ring.xunit.bsp  Vega.icns  Version.txt  armorf.spr  armorl.alp  armorl.spr  auto.alp  auto.spr  blasterpower.alp  blasterpower.spr  crosshairs.alp  crosshairs.spr  cursor1.cur  default.agg.xml  default.final.xml  default.int.xml  default.scared.xml  default.test.xml  defaultscared1.xml  disabled-cockpit.cpt  dralthi.xmesh  dralthi.xunit  dralthi.xunit.bsp  drydock-Cube_27-Material.xmesh  drydock-Cube_27-Material1.xmesh  drydock-Cube_27.xunit  drydock-Cube_27.xunit.bsp  dumbfire.xmesh  eject.alp  eject.spr  evade.xml  explode_orange0.alp  (+96 more)
data/.vegastrike/: .system  aera.m3u  aerabattle.m3u  agricultural.m3u  asteroids.m3u  battle.m3u  carribean.m3u  commerce_center.m3u  factory.m3u  galacticbattle.m3u  ice.m3u  industrial.m3u  iso.m3u  isobattle.m3u  launch.m3u  loss.m3u  military.m3u  news.m3u  ocean.m3u  panic.m3u  peace.m3u  save.txt  starfortress.m3u  terran.m3u  terranbattle.m3u  unit.m3u  unit_pirate.m3u  university.m3u  victory.m3u
data/ai/: Makefile.am  VegaEvents.csv  VegaPriorities.csv
data/animations/: Makefile.am
data/bases/: AsteroidFighterBase.py  Commerce_Center.py  Factory.py  Fighter_Barracks.py  Fighter_Barracks__rlaan.py  Lava.py  MiningBase.py  NEW_BASE.py  Shaper_Bio_Adaptation.py  Snow.py  Starfortress.py  aera_lib.py  agriculture_lib.py  bar-ok.py  bar.py  bar_lib.py  bartender.py  bartender_agricultural.py  bartender_carribean.py  bartender_default.py  bartender_frigidmud.py  bartender_military.py  bartender_mining.py  bartender_pirates.py  bartender_union.py  bartender_university.py  carribean.py  computer_lib.py  desert.py  earth_night.py  earth_sunset.py  explore.py  fixers.py  fleetcarrier.py  forest.py  frigid_mud.py  gas_giant.py  gas_lib.py  guilds.py  industrial_lib.py  (+28 more)
data/cgi-accountserver/: accountserver.py  db.py  httpserver.py  settings.sample.py  vsconfig.py
data/communications/: LIHW_citizen.xml  aera.xml  aeran_merchant_marine.xml  andolian.xml  andolian_citizen.xml  andoliantoprivateer.xml  confed.xml  dgn.xml  forsaken.xml  forsaken_citizen.xml  highborn.xml  homeland-security.xml  hunter.xml  iso.xml  klkk.xml  luddites.xml  mechanist.xml  mechanist_citizen.xml  merchant_guild.xml  merchant_guild_citizen.xml  militia.xml  neutral.xml  pirates.xml  privateer.xml  privateertoISO.xml  privateertoaera.xml  privateertoconfed.xml  privateertohomeland-security.xml  privateertohunter.xml  privateertoluddites.xml  privateertomerchant_guild.xml  privateertopirates.xml  privateertoprivateer.xml  purist_citizen.xml  rlaan.xml  shaper.xml  shmrn.xml  uln.xml  uln_citizen.xml  unadorned.xml
data/documentation/: IntroMonologue.txt  description.xunit  detailtextures.txt  factioninfo.csv  fixers_howto.html  magic  mission_howto.txt  newfs_changes.txt  readme.txt  shield_howto.txt  unitstats.csv  vegastrike.1  vegastrikedb.xls  vs_font_guideline.txt
data/history/: Excerpts_from_the_Ivan_kltakln_guidebook.txt
data/meshes/: BFXMMake  Makefile.am  aeraburn.bfxm  aeraburn.xmesh  atmXatm.bfxm  atmXatm.xmesh  atmXhalo.bfxm  atmXhalo.xmesh  box.bfxm  box.xmesh  confedburn.bfxm  confedburn.xmesh  engine1.png.bfxm  engine1.png.xmesh  missile.xmesh  nav-Plane03-1-Default.bfxm  nav-Plane03-1-Default.xmesh  navredlight.bfxm  navredlight.xmesh  sphereatm.bfxm  (+9 more)
datascripts/: 021.nsi  configure.ac  makeloki.sh  setup.base.xml  setup.music.xml
doc/: ASSET_API.rst  AUTHORS  CMakeLists.txt  DOCUMENTATION  Engine-API.md  VS_Doxygen.RDME  VS_Valgrind.RDME  about.html  alex-index.html  cancel.html  credits.html  doc.html  donation.html  download.html  email.html  feedback.html  index.html  installing.html  links.html  main.html  menn7.html  menu.html  mission_scripting.txt  pics.html  playing.html  programming_missions.txt  support.html  thankyou.html
libraries/: CMakeLists.txt
mission/: Makefile.am  button.cpp  button.h  easydom.h  file.cpp  file.h  general.cpp  general.h  glut_support.cpp  glut_support.h  graphics.cpp  graphics.h  hashtable.h  select.cpp  selector.cpp  selector.h  text_area.cpp  text_area.h  xml_support.h
objconv/: CMakeLists.txt  Makefile.am  SystemLinks.csv  SystemList.csv  asteroidgen.cpp  asteroidgen.py  base_maker.cpp  base_maker_texture.cpp  blender_xmesh_export.py  blender_xmesh_import.py  blender_xmesh_import.txt  cargoconvert.cpp  configparser.py  csv.py  csvexport.py  csvimport.py  dattoxml.cpp  findreplace.cpp  hashtest.cpp  missionpriceadj.cpp  mplconvert.py  obj2xml  objscale.cpp  planetMakerHelper.py  replace.cpp  scramble.cpp  starCodes.py  starSystemPlanetMaker.py  star_system_gen.cpp  trisort.cpp  trisort.h  ucsv.py  varray.cpp  wcSystemReader.py  wcp2xml
setup/: CMakeLists.txt  vega.rc
src/: EnvironmentMapGenerator.cpp  GL_util.h  Hash.cpp  Makedepend  Makefile  Makefile.am  Makefile.in  Makefile.irix  Makefile.sml  Makefile070301  Resources.RES  Resources.aps  SharedPool.cpp  SharedPool.h  Singleton.h  UnitCollection.cpp  UnitCollection.h  UnitContainer.cpp  UnitContainer.h  VSFileXMLSerializer.cpp  VSFileXMLSerializer.h  XMLDocument.cpp  XMLDocument.h  accountserver.cpp  alglib.c  alglib.h  audio.c  audio_data.c  audiolib.h  buildlin.ld  buildlin.sh  buildlin32.sh  buildlin64.sh  buildmac.ld  buildmac.sh  cg_global.cpp  cg_global.h  cmd.h  cmd_aggressive_ai.cpp  cmd_aggressive_ai.h  (+310 more)
(+18998 files in other folders)
